--- a/index.html
+++ b/index.html
@@ -3,81 +3,141 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
+    <title>Sumit Portfolio</title>
 
     <style>
-        /* LOADING SCREEN CSS */
-        body { margin: 0; padding: 0; }
+        body {
+            margin: 0;
+            padding: 0;
+            background: #0d1224;
+            color: white;
+            font-family: Arial, sans-serif;
+        }
 
+        /* 🌟 LOADING SCREEN */
         .loading {
-            text-align: center;
-            padding-top: 70px;
-            font-family: sans-serif;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #0d1224;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
         }
 
         .loader-circle {
-            width: 60px;
-            height: 60px;
-            border: 6px solid #ddd;
-            border-top-color: #3498db;
+            width: 80px;
+            height: 80px;
+            border: 6px solid rgba(255,255,255,0.2);
+            border-top-color: #6c63ff;
             border-radius: 50%;
-            margin: 0 auto;
             animation: spin 1s linear infinite;
-        }
-
-        .loader-bar {
-            width: 200px;
-            height: 6px;
-            background: #ddd;
-            margin: 20px auto;
-            overflow: hidden;
-            border-radius: 5px;
-        }
-
-        .loader-bar .progress {
-            width: 0%;
-            height: 100%;
-            background: #3498db;
-            animation: loadBar 2s forwards;
         }
 
         @keyframes spin {
             to { transform: rotate(360deg); }
         }
 
-        @keyframes loadBar {
-            to { width: 100%; }
+        .loader-bar {
+            width: 300px;
+            height: 6px;
+            background: rgba(255,255,255,0.2);
+            margin-top: 20px;
+            border-radius: 5px;
         }
+
+        .progress {
+            width: 0%;
+            height: 100%;
+            background: #6c63ff;
+        }
+
+        .loading-text {
+            margin-top: 20px;
+            letter-spacing: 4px;
+            color: #a8a8ff;
+        }
+
+        /* 🌟 MAIN CONTENT HIDE */
+        .main {
+            display: none;
+        }
+
+        /* SIMPLE DEMO SECTIONS */
+        section {
+            padding: 60px 20px;
+            text-align: center;
+        }
+
+        h1 { margin-bottom: 10px; }
+        p { opacity: 0.7; }
     </style>
 </head>
 
 <body>
 
-    <!-- 🔵 LOADER START -->
+    <!-- 🌟 LOADER -->
     <div class="loading">
         <div class="loader-circle"></div>
+
         <div class="loader-bar">
             <div class="progress"></div>
         </div>
-        <p class="loading-text">LOADING…</p>
-    </div>
-    <!-- 🔵 LOADER END -->
 
-    <!-- 🔴 MAIN CONTENT HIDE BY DEFAULT -->
-    <div class="main" style="display:none;">
-
-        <!-- ⭐ APNA PURA WEBSITE CONTENT YAHAN RAKHNA ⭐ -->
-        <h1>Hello, Website Loaded!</h1>
-        <p>Ab tumhara actual content yahan ayega.</p>
-
+        <p class="loading-text">LOADING...</p>
     </div>
 
-    <!-- LOADER HIDE SCRIPT -->
+
+    <!-- 🌟 MAIN CONTENT -->
+    <div class="main">
+
+        <!-- ⭐ HOME SECTION -->
+        <section id="home">
+            <h1>Hi, I'm Sumit 👋</h1>
+            <p>Welcome to my portfolio website.</p>
+        </section>
+
+        <!-- ⭐ ABOUT SECTION -->
+        <section id="about">
+            <h1>About Me</h1>
+            <p>Write about yourself here...</p>
+        </section>
+
+        <!-- ⭐ SKILLS SECTION -->
+        <section id="skills">
+            <h1>My Skills</h1>
+            <p>Your skills will go here...</p>
+        </section>
+
+        <!-- ⭐ CONTACT SECTION -->
+        <section id="contact">
+            <h1>Contact Me</h1>
+            <p>Email / Social links here...</p>
+        </section>
+
+    </div>
+
+    <!-- 🌟 LOADING SCRIPT -->
     <script>
-        window.addEventListener("load", function() {
-            document.querySelector(".loading").style.display = "none";
-            document.querySelector(".main").style.display = "block";
-        });
+        let progress = 0;
+        let bar = document.querySelector(".progress");
+        let loader = document.querySelector(".loading");
+        let main = document.querySelector(".main");
+
+        let load = setInterval(() => {
+            progress += 1;
+            bar.style.width = progress + "%";
+
+            if (progress >= 100) {
+                clearInterval(load);
+                loader.style.display = "none";
+                main.style.display = "block";
+            }
+        }, 20);
     </script>
 
 </body>
