--- a/index.html
+++ b/index.html
@@ -3,141 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sumit Portfolio</title>
+    <title>About Sumit</title>
 
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: #0d1224;
-            color: white;
-            font-family: Arial, sans-serif;
-        }
+        body { margin: 0; padding: 0; font-family: sans-serif; }
 
-        /* 🌟 LOADING SCREEN */
+        /* LOADER */
         .loading {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: #0d1224;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
+            text-align: center;
+            padding-top: 80px;
         }
 
         .loader-circle {
-            width: 80px;
-            height: 80px;
-            border: 6px solid rgba(255,255,255,0.2);
-            border-top-color: #6c63ff;
+            width: 60px;
+            height: 60px;
+            border: 6px solid #ddd;
+            border-top-color: #3498db;
             border-radius: 50%;
+            margin: 0 auto;
             animation: spin 1s linear infinite;
+        }
+
+        .loader-bar {
+            width: 200px;
+            height: 6px;
+            background: #ddd;
+            margin: 20px auto;
+            border-radius: 5px;
+            overflow: hidden;
+        }
+
+        .loader-bar .progress {
+            width: 0%;
+            height: 100%;
+            background: #3498db;
+            animation: loadBar 2s forwards;
         }
 
         @keyframes spin {
             to { transform: rotate(360deg); }
         }
 
-        .loader-bar {
-            width: 300px;
-            height: 6px;
-            background: rgba(255,255,255,0.2);
-            margin-top: 20px;
-            border-radius: 5px;
+        @keyframes loadBar {
+            to { width: 100%; }
         }
 
-        .progress {
-            width: 0%;
-            height: 100%;
-            background: #6c63ff;
-        }
-
-        .loading-text {
-            margin-top: 20px;
-            letter-spacing: 4px;
-            color: #a8a8ff;
-        }
-
-        /* 🌟 MAIN CONTENT HIDE */
+        /* MAIN HIDDEN BY DEFAULT */
         .main {
             display: none;
+            padding: 20px;
         }
-
-        /* SIMPLE DEMO SECTIONS */
-        section {
-            padding: 60px 20px;
-            text-align: center;
-        }
-
-        h1 { margin-bottom: 10px; }
-        p { opacity: 0.7; }
     </style>
 </head>
 
 <body>
 
-    <!-- 🌟 LOADER -->
+    <!-- Loader -->
     <div class="loading">
         <div class="loader-circle"></div>
-
-        <div class="loader-bar">
-            <div class="progress"></div>
-        </div>
-
-        <p class="loading-text">LOADING...</p>
+        <div class="loader-bar"><div class="progress"></div></div>
+        <p>LOADING…</p>
     </div>
 
-
-    <!-- 🌟 MAIN CONTENT -->
+    <!-- MAIN CONTENT -->
     <div class="main">
-
-        <!-- ⭐ HOME SECTION -->
-        <section id="home">
-            <h1>Hi, I'm Sumit 👋</h1>
-            <p>Welcome to my portfolio website.</p>
-        </section>
-
-        <!-- ⭐ ABOUT SECTION -->
-        <section id="about">
-            <h1>About Me</h1>
-            <p>Write about yourself here...</p>
-        </section>
-
-        <!-- ⭐ SKILLS SECTION -->
-        <section id="skills">
-            <h1>My Skills</h1>
-            <p>Your skills will go here...</p>
-        </section>
-
-        <!-- ⭐ CONTACT SECTION -->
-        <section id="contact">
-            <h1>Contact Me</h1>
-            <p>Email / Social links here...</p>
-        </section>
-
+        <!-- Yahan apna pura website paste karo -->
+        <h1>Hello, Website Loaded!</h1>
+        <p>Ab tumhara actual content dikh raha hai.</p>
     </div>
 
-    <!-- 🌟 LOADING SCRIPT -->
     <script>
-        let progress = 0;
-        let bar = document.querySelector(".progress");
-        let loader = document.querySelector(".loading");
-        let main = document.querySelector(".main");
-
-        let load = setInterval(() => {
-            progress += 1;
-            bar.style.width = progress + "%";
-
-            if (progress >= 100) {
-                clearInterval(load);
-                loader.style.display = "none";
-                main.style.display = "block";
-            }
-        }, 20);
+        window.addEventListener("load", function() {
+            document.querySelector(".loading").style.display = "none";
+            document.querySelector(".main").style.display = "block";
+        });
     </script>
 
 </body>
