--- a/index.html
+++ b/index.html
@@ -4,52 +4,42 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>About Sumit</title>
-
 <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+<!-- LOADING SCREEN -->
 <div class="loading">
     <div class="loader-circle"></div>
-    <p>LOADING...</p>
+    <p class="loading-text">LOADING...</p>
 </div>
 
+<!-- MAIN CONTENT -->
 <div class="main" style="display:none;">
-
+    
     <h1>Sumit</h1>
-    <p>Web Developer / Creator</p>
+    <p class="sub">Web Developer / Creator</p>
 
-    <img src="sumit.jpg" alt="Sumit">
+    <div class="profile">
+        <img src="a89zz4.jpg" alt="Sumit">
+    </div>
 
     <h2>About Me</h2>
-    <p>Mera short intro yahaan…</p>
+    <p class="para">I am Sumit — a passionate web developer, video editor & digital creator.</p>
 
     <h2>Skills</h2>
-    <ul>
+    <ul class="skills">
         <li>HTML / CSS / JS</li>
         <li>Editing</li>
         <li>UI Design</li>
     </ul>
 
     <h2>Contact</h2>
-    <a href="https://t.me/+CpfvklAFQLgwYTY1">Telegram</a>
+    <a class="btn" href="https://t.me/+CpfvklAFQLgwYTY1">Telegram</a>
 
 </div>
 
-<script>
-window.addEventListener("load", () => {
-    setTimeout(() => {
-        document.querySelector(".loading").style.opacity = "0";
-
-        setTimeout(() => {
-            document.querySelector(".loading").style.display = "none";
-            document.querySelector(".main").style.display = "block";
-        }, 500);
-
-    }, 2000);
-});
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
