--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p class="sub">Web Developer / Creator</p>
 
     <div class="profile">
-        <img src="https://files.catbox.moe/8vn4sn.jpg" alt="Sumit">
+        <img src="./sumit.jpg" alt="Sumit">
     </div>
 
     <h2>About Me</h2>
